Mejorando últimos estilos

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+                <div class="navbar-header padding-navbar">
                   <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left padding-0" href="index.html"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
+                 <a class="navbar-brand pull-left padding-0 logo-gib" href="index.html"><img src="assets/images/logo-gs.png" alt="Logo Gib-Solutions" class="img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
-                 <ul class="nav navbar-nav navbar-right">
+                 <ul class="nav navbar-nav navbar-right padding-top-header-ul">
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-scroll><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
@@ -72,17 +72,16 @@
                <!-- slider -->
                <div class="carousel-inner" role="listbox">
                  <div class="item active height-img-movile">
-                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-responsive">
+                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-responsive filter-img">
                       <div class="carousel-caption">
-                        <h3 class="text-shadow">Especialistas</h3>
-                        <p class="text-shadow">en soluciones de monitoreo y consultoría</p>
+                        <h3 class="text-shadow">¿Necesitas elegir la mejor solución de monitoreo?</h3>
                       </div>
                     </div>
                   <div class="item height-img-movile">
-                    <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-responsive">
+                    <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-responsive filter-img">
                       <div class="carousel-caption">
-                        <h3>...</h3>
-                        <p>...</p>
+                        <h3 class="text-shadow">Especialistas</h3>
+                        <p class="text-shadow">En soluciones de monitoreo y consultoría</p>
                       </div>
                     </div>
                   </div>
@@ -116,9 +115,9 @@
                   <div class="col-xs-12 col-lg-6">
                     <div class="content-box">
                       <br>
-                      <h4 class="center-align">El principal valor de nuestra empresa está en el equipo de profesionales altamente calificados y su metodología de desarrollo y gestión, con aplicaciones propias e integración con socios de negocios.</h4>
+                      <h4 class="center-align">Nuestra empresa está formada por un equipo de profesionales altamente calificados con amplia experiencia en desarrollo, gestión, implementación y soporte en soluciones de Monitoreo.</h4>
                       <br>
-                      <h4 class="center-align">Nuestros clientes son grandes corporaciones nacionales y multinacionales, que han depositado su confianza en los servicios de GIB, que se convierten en un socio estratégico en la construcción de indicadores de calidad y la satisfacción de sus clientes finales.</h4>
+                      <h4 class="center-align"><strong>GIB </strong> Solutions cuenta con una cartera de clientes, grandes corporaciones nacionales y multinacionales, que depositan su confianza en nuestros servicios, y se convierten en socios estratégicos en la construcción de indicadores de calidad y satisfacción.</h4>
                     </div>
                   </div>
                   <div class="col-xs-12 col-lg-6">
@@ -145,10 +144,9 @@
               </div>
               <div class="row">
                 <div class="col-sm-12 padding-second-section">
-                  <h4 class="center-align">Hemos contribuido a la Industria por años, con la implantación de Soluciones y Servicios TI que apoyan los procesos de negocio, impulsando la adopción de mejores prácticas y estándares de la industria y desplegando nuestra experiencia regional mediante herramientas y/o servicios de la mano de nuestros Partners tecnológicos.</h4>
-                  <h4 class="center-align">El Portafolio de Soluciones y Servicios de Mainsoft integra la tecnología de las casas de Software que representa, junto a las componentes de Consultoría y Servicios Profesionales desarrolladas en base marcos de referencia de la Industria y experiencia acumulada.</h4>
-                  <h4 class="center-align">Mainsoft, fundada en Chile en 1993, cuenta con oficinas en Santiago de Chile, Lima, Perú y Buenos Aires, Argentina.</h4>
-                  <h4 class="center-align">Trabajan hoy en el Grupo Mainsoft más de ochenta personas considerando las áreas de venta, preventa, implementación, soporte, consultoría y servicios. Una Dirección Regional con base en Chile y Country Managers locales, permiten una eficiente administración para una óptima atención a nuestros clientes.</h4>
+                  <h4 class="center-align">Somos una empresa con muchos años de experiencia en diferentes soluciones de Monitoreo, lo que nos convierte en la consultora perfecta para ayudarte en la elección de la herramienta idónea que se ajuste a tus requerimientos. </h4>
+                  <br>
+                  <h4 class="center-align">Tenemos claro que muchas de las infraestructuras y aplicaciones no son las mismas; por este motivo, la mejor solución permitirá una eficiente administración de recursos, para una óptima atención en la resolución de incidencias.</h4>
                 </div>
               </div>
             </div>
@@ -169,7 +167,7 @@
                         <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
                       </div>
                        <h2 class="center-align"><strong class="blue">Misión</strong></h2>
-                       <p class="center-align">Entregar métricas e indicadores para la gestión de calidad de los canales digitales y servicios de infraestructura tecnológica, que permitan realizar análisis para establecer y controlar los niveles de servicio, con el propósito de mejorar la satisfacción de los usuarios finales y contribuir al proceso de mejoramiento continuo.</p>
+                       <p class="center-align">Brindar soluciones que apoyen en la gestión de procesos y mejora contínua, logrando calidad y eficiencia en nuestros servicios, mediante uso de buenas prácticas, logrando de esa manera excelencia y competitividad.</p>
                     </div>
                   </div>
                 </div>
@@ -177,10 +175,10 @@
                   <div class="content-box-section3">
                     <div class="content">
                       <div class="flex-direction-column">
-                        <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
+                        <img src="assets/images/vision.png" alt="Visión" width="140" height="140">
                       </div>
                        <h2 class="center-align"><strong class="blue">Visión</strong></h2>
-                       <p class="center-align">Ser el ente certificador y referente de la industria TI de la calidad de los canales digitales mediante soluciones tecnológicas que mejoren la experiencia de los usuarios finales.</p>
+                       <p class="center-align">Posicionarnos en el mercado como la empresa líder en consultorías TI, brindando las mejores soluciones tecnológicas a nuestros clientes.</p>
                     </div>
                   </div>
                 </div>
@@ -188,10 +186,10 @@
                   <div class="content-box-section3">
                     <div class="content">
                       <div class="flex-direction-column">
-                        <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
+                        <img src="assets/images/proposito.png" alt="Propósito" width="140" height="140">
                       </div>
                        <h2 class="center-align"><strong class="blue">Propósito</strong></h2>
-                       <p class="center-align">Proveer a nuestros clientes la más completa información sobre la calidad de sus canales digitales: Medición de parámetros percibidos por usuarios finales mediante monitoreo sintético y metodología Atentus. Visibilidad de plataforma TI (infraestructura) y desempeño de aplicaciones (APM) Seguimiento y análisis de las conexiones de usuarios reales (RUM). Ayudar a los clientes para identificar y mejorar el funcionamiento de sus canales digitales y plataformas TI, para mejorar el desempeño de sus aplicaciones y la percepción de sus usuarios.</p>
+                       <p class="center-align">Garantía de Calidad, Ecología, Ética Profesional, Innovación & Creatividad, Seguridad, Orientación a los resultados.</p>
                     </div>
                   </div>
                 </div>
