--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navbar-->
     <header class="header">
-      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav" data-scroll-header>
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 navbar-fixed-top padding-nav nav-scroll-plugin" data-scroll-header>
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
@@ -281,8 +281,9 @@
     <!--Scroll-->
     <script src="vendor/smooth-scroll.min.js"></script>
     <script>
-       var scroll = new SmoothScroll('a[href*="#"]');
-       header :  ' [data-scroll-header] '
+       var scroll = new SmoothScroll('a[href*="#"]', {
+         header: '[data-scroll-header]'
+       });
     </script>
   </body>
 </html>
