--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                   <div class="item height-img-movile">
                     <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-responsive filter-img">
                       <div class="carousel-caption">
-                        <h3 class="text-shadow">Especialistas</h3>
-                        <p class="text-shadow">En soluciones de monitoreo y consultoría</p>
+                        <h3 class="text-shadow">¡Servimos con pasión!</h3>
+                        <p class="text-shadow">La filosofía de nuestro equipo humano es la excelencia en el servicio.</p>
                       </div>
                     </div>
                   </div>
