Cambiando color de navegador movile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gib-Solutions</title>
     <!--Color de barra de navegación que sólo se verá en versión movile-->
-    <meta name="theme-color" content="#6e268b"/>
+    <meta name="theme-color" content="#343A40"/>
     <!--Logo pequeño que estará ubciado en la pestaña-->
     <link rel="icon" type="image/png" href="assets/images/logo-gs.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
