Cambiando tamaño de logo en header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header padding-navbar">
+                <div class="navbar-header">
                   <button class="collapsed navbar-toggle btn-no-border btn-no-background" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
